--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-simplemde": "^1.0.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
