--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.0",
+    "pusher-js": "^5.0.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vue-simplemde": "^1.0.0",
